<resources>
    <string name="app_name">MySQL_APP</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Products</string>
    <string name="tab_text_3">Services</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="product_form_title">Add Product</string>
    <string name="hint_new_prod_name">Product name</string>
    <string name="hint_prod_type">Product Type</string>
    <string name="hint_prod_cost">Cost</string>
    <string name="hint_prod_contact">Contact</string>
    <string name="hint_prod_desc">Description</string>
    <string name="button_prod_save">Save</string>
</resources>
